--- a/src/MarketingBox.ExternalReferenceProxy.Api.Client/MarketingBox.ExternalReferenceProxy.Api.Client.csproj
+++ b/src/MarketingBox.ExternalReferenceProxy.Api.Client/MarketingBox.ExternalReferenceProxy.Api.Client.csproj
@@ -11,9 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Autofac" Version="6.3.0" />
-    <PackageReference Include="Grpc.Core.Api" Version="2.41.1" />
+    <PackageReference Include="Grpc.Core.Api" Version="2.44.0" />
     <PackageReference Include="JetBrains.Annotations" Version="2021.3.0" />
-    <PackageReference Include="Grpc.Net.Client" Version="2.40.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.42.0" />
     <PackageReference Include="MyJetWallet.Sdk.Grpc" Version="2.0.0" />
     <PackageReference Include="MyJetWallet.Sdk.GrpcMetrics" Version="2.0.4" />
     <PackageReference Include="System.ServiceModel.Primitives" Version="4.9.0" />
@@ -24,12 +24,12 @@
     <TargetsForTfmSpecificBuildOutput>
       $(TargetsForTfmSpecificBuildOutput);PackReferencedProjectOutputs
     </TargetsForTfmSpecificBuildOutput>
-    <PackageId>MyJetWallet.Service.ExternalReferenceProxy.Api.Client</PackageId>
-    <Authors>MyJetWallet</Authors>
-    <Company>MyJetWallet</Company>
-    <Product>MyJetWallet</Product>
-    <PackageProjectUrl>https://github.com/MyJetWallet/Service.ExternalReferenceProxy.Api</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/MyJetWallet/Service.ExternalReferenceProxy.Api</RepositoryUrl>
+    <PackageId></PackageId>
+    <Authors></Authors>
+    <Company></Company>
+    <Product></Product>
+    <PackageProjectUrl></PackageProjectUrl>
+    <RepositoryUrl></RepositoryUrl>
   </PropertyGroup>
 
   <Target Name="PackReferencedProjectOutputs" DependsOnTargets="BuildOnlySettings;ResolveReferences">
