--- a/src/MarketingBox.ExternalReferenceProxy.Api.Client/MarketingBox.ExternalReferenceProxy.Api.Client.csproj
+++ b/src/MarketingBox.ExternalReferenceProxy.Api.Client/MarketingBox.ExternalReferenceProxy.Api.Client.csproj
@@ -25,9 +25,9 @@
       $(TargetsForTfmSpecificBuildOutput);PackReferencedProjectOutputs
     </TargetsForTfmSpecificBuildOutput>
     <PackageId>MarketingBox.ExternalReferenceProxy.Api.Client</PackageId>
-    <Authors>MarketingBox</Authors>
-    <Company>MarketingBox</Company>
-    <Product>MarketingBox</Product>
+    <Authors>MyJetMarketingBox</Authors>
+    <Company>MyJetMarketingBox</Company>
+    <Product>MyJetMarketingBox</Product>
     <PackageProjectUrl>https://github.com/MyJetMarketingBox/MarketingBox.ExternalReferenceProxy.Api</PackageProjectUrl>
     <RepositoryUrl>https://github.com/MyJetMarketingBox/MarketingBox.ExternalReferenceProxy.Api</RepositoryUrl>
   </PropertyGroup>
